--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "lint": "eslint **/*.js",
-    "start": "node"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/petercole-401-advanced-javascript/notes#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "minimist": "^1.2.0"
+    "minimist": "^1.2.0",
+    "superagent": "^5.2.1"
   }
 }
