--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "is-url": "^1.2.4",
+    "jest": "^25.1.0",
     "minimist": "^1.2.0",
     "superagent": "^5.2.1"
   }
