--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "is-url": "^1.2.4",
     "jest": "^25.1.0",
     "minimist": "^1.2.0",
+    "mongoose": "^5.8.12",
     "superagent": "^5.2.1"
   }
 }
